--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
 <body>
     <header>
         <div class="container">
-            <div class="logo">Tecnocel</div>
+            <div class="logo">movicel</div>
             <nav>
                 <ul>
                     <li><a href="#inicio">Inicio</a></li>
@@ -695,4 +695,5 @@
                 // Aquí se puede integrar con API del admin para agregar al carrito real
             });
         });
+
     </script>
