Change greeting from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 
     <section class="hero" id="inicio">
         <div class="hero-content">
-            <h1>Descubre Tecnocel</h1>
+            <h1>Descubre movicel</h1>
             <p>Explora lo último en tecnología y personaliza tu celular con nuestro servicio experto.</p>
             <a href="#categorias" class="btn">Ver Categorías</a>
         </div>
@@ -697,3 +697,4 @@
         });
 
     </script>
+
